--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <h1>این دامنه برای فروش است</h1>
-  <p><strong>دامنه:</strong> radmusic.ir</p>
+  <p><strong></strong> radmusic.ir</p>
   <p><strong>قیمت:</strong> 49 میلیون تومان</p>
   <p><strong>تماس:</strong> 09142116422</p>
 </body>
