--- a/index.html
+++ b/index.html
@@ -14,5 +14,15 @@
   <p><strong></strong> radmusic.ir</p>
   <p><strong>قیمت:</strong> 10 میلیون تومان</p>
   <p><strong>تماس:</strong> 09142116422</p>
+  <!-- بازدید سایت -->
+<div style="margin-top: 40px; text-align:center;">
+  <p>تعداد بازدیدها:</p>
+  <a href="https://www.hitwebcounter.com" target="_blank">
+    <img src="https://hitwebcounter.com/counter/counter.php?page=20866309&style=0024&nbdigits=1&type=ip&initCount=0" 
+         title="Counter Widget" 
+         alt="Visit counter For Websites" 
+         border="0" />
+  </a>
+</div>
 </body>
 </html>
